<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        android:padding="16dp"
        tools:context=".SignInFragment">


        <TextView
            android:layout_marginTop="90dp"
            android:id="@+id/tvSignInTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/new_york_extra_large_bold"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="13sp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="MONOCLE" />

        <TextView
            android:id="@+id/tvSignInDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:fontFamily="@font/sfpro_text_regular"
            android:gravity="center_horizontal"
            android:letterSpacing="0"
            android:lineSpacingExtra="8sp"
            android:text="@string/sign_in_description"
            android:textColor="@color/steel"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivSignInImage" />


        <ImageView
            android:id="@+id/ivSignInImage"
            android:layout_width="198dp"
            android:layout_marginTop="60dp"
            android:layout_height="204dp"
            android:src="@drawable/ic_illustration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSignInTitle" />

        <EditText
            android:id="@+id/etSignInEnterNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_shape"
            android:fontFamily="@font/sfpro_text_light"
            android:hint="@string/sign_in_et_text"
            android:inputType="number"
            android:letterSpacing="0"
            android:lineSpacingExtra="5sp"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnGoToProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSignInDescription" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoToProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/sign_in_page_button_shape"
            android:fontFamily="@font/sfpro_display_bold"
            android:padding="8dp"
            android:text="@string/bnt_go_to_profile"
            android:textColor="@color/dark"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
